# dataclass-csv

./: .gitignore  .travis.yml  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  hello.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: test.yml  unit-test.yml
dataclass_csv/: __init__.py  __init__.pyi  dataclass_reader.py  dataclass_reader.pyi  dataclass_writer.py  dataclass_writer.pyi  decorators.py  decorators.pyi  exceptions.py  exceptions.pyi  field_mapper.py  field_mapper.pyi  header_mapper.py  header_mapper.pyi
dataclass_csv2/: dataclass_writer.pyi  decorators.pyi  exceptions.py
tests/: conftest.py  mocks.py  test_csv_data_validation.py  test_dataclass_reader.py  test_dataclass_writer.py  test_decorators.py
