[project]
name = "dataclass-csv2"
version = "0.1.0"
description = "Map CSV data into dataclasses"
readme = "README.md"
license-expression = "BSD-3-Clause"
requires-python = ">=3.7"
dependencies = []
authors = [
    # TODO, check if only active maintainer should be set
    {name = "Kraktus", email = "kraktus@users.noreply.github.com"},
    {name = "Daniel Furtado", email = "daniel@dfurtado.com"},
]
keywords = ["dataclass", "dataclasses", "csv", "dataclass-csv"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X", 
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Environment :: Console",
]


[project.urls]
Homepage = "https://github.com/kraktus/dataclass-csv2"
"Issue Tracker" = "https://github.com/kraktus/dataclass-csv2/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.392.post0",
    "pytest>=7.4.4",
]


# pyproject.toml
[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dataclass_csv"]